--- a/CSS/output.css
+++ b/CSS/output.css
@@ -198,14 +198,23 @@
   .relative {
     position: relative;
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-1 {
     top: calc(var(--spacing) * 1);
+  }
+  .top-5 {
+    top: calc(var(--spacing) * 5);
   }
   .top-\[0\.5px\] {
     top: 0.5px;
   }
   .top-\[1px\] {
     top: 1px;
+  }
+  .top-\[2px\] {
+    top: 2px;
   }
   .top-\[3px\] {
     top: 3px;
@@ -228,6 +237,9 @@
   .top-\[20pxpx\] {
     top: 20pxpx;
   }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
   .right-\[0px\] {
     right: 0px;
   }
@@ -236,6 +248,9 @@
   }
   .right-\[10px\] {
     right: 10px;
+  }
+  .right-\[10pz\] {
+    right: 10pz;
   }
   .right-\[12px\] {
     right: 12px;
@@ -279,8 +294,23 @@
   .right-\[140px\] {
     right: 140px;
   }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .bottom-\[-3px\] {
+    bottom: -3px;
+  }
+  .bottom-\[0px\] {
+    bottom: 0px;
+  }
+  .bottom-\[1px\] {
+    bottom: 1px;
+  }
   .bottom-\[2px\] {
     bottom: 2px;
+  }
+  .bottom-\[3px\] {
+    bottom: 3px;
   }
   .bottom-\[10px\] {
     bottom: 10px;
@@ -300,6 +330,9 @@
   .flex {
     display: flex;
   }
+  .hidden {
+    display: none;
+  }
   .table {
     display: table;
   }
@@ -311,6 +344,12 @@
   }
   .h-\[5px\] {
     height: 5px;
+  }
+  .h-\[6px\] {
+    height: 6px;
+  }
+  .h-\[7\] {
+    height: 7;
   }
   .h-\[10px\] {
     height: 10px;
@@ -329,6 +368,15 @@
   }
   .h-\[63px\] {
     height: 63px;
+  }
+  .h-\[65px\] {
+    height: 65px;
+  }
+  .h-\[68\] {
+    height: 68;
+  }
+  .h-\[68px\] {
+    height: 68px;
   }
   .h-\[70px\] {
     height: 70px;
@@ -437,6 +485,9 @@
   .bg-\[001A57\] {
     background-color: 001A57;
   }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
+  }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
   }
@@ -515,6 +566,10 @@
   .py-\[25px\] {
     padding-block: 25px;
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
@@ -522,6 +577,10 @@
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .text-\[1px\] {
     font-size: 1px;
@@ -622,6 +681,36 @@
       visibility: visible;
     }
   }
+  .md\:absolute {
+    @media (width >= 48rem) {
+      position: absolute;
+    }
+  }
+  .md\:relative {
+    @media (width >= 48rem) {
+      position: relative;
+    }
+  }
+  .md\:flex {
+    @media (width >= 48rem) {
+      display: flex;
+    }
+  }
+  .md\:hidden {
+    @media (width >= 48rem) {
+      display: none;
+    }
+  }
+  .md\:h-\[73px\] {
+    @media (width >= 48rem) {
+      height: 73px;
+    }
+  }
+  .md\:w-\[90\%\] {
+    @media (width >= 48rem) {
+      width: 90%;
+    }
+  }
   .md\:flex-row {
     @media (width >= 48rem) {
       flex-direction: row;
@@ -635,6 +724,11 @@
   .md\:px-16 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:py-\[25px\] {
+    @media (width >= 48rem) {
+      padding-block: 25px;
     }
   }
 }
