--- a/CSS/output.css
+++ b/CSS/output.css
@@ -7,11 +7,12 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-blue-300: oklch(80.9% 0.105 251.813);
+    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
@@ -22,6 +23,10 @@
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-white: #fff;
     --spacing: 0.25rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
@@ -30,13 +35,8 @@
     --text-2xl--line-height: calc(2 / 1.5);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
     --font-weight-medium: 500;
-    --font-weight-bold: 700;
-    --radius-lg: 0.5rem;
-    --radius-xl: 0.75rem;
-    --radius-3xl: 1.5rem;
+    --font-weight-semibold: 600;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -198,134 +198,29 @@
   .relative {
     position: relative;
   }
-  .top-0 {
-    top: calc(var(--spacing) * 0);
-  }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
-  .top-5 {
-    top: calc(var(--spacing) * 5);
+  .-top-2 {
+    top: calc(var(--spacing) * -2);
   }
   .top-\[0\.5px\] {
     top: 0.5px;
   }
-  .top-\[1px\] {
-    top: 1px;
-  }
-  .top-\[2px\] {
-    top: 2px;
-  }
-  .top-\[3px\] {
-    top: 3px;
-  }
-  .top-\[5px\] {
-    top: 5px;
-  }
-  .top-\[7px\] {
-    top: 7px;
-  }
-  .top-\[10px\] {
-    top: 10px;
-  }
-  .top-\[15px\] {
-    top: 15px;
-  }
-  .top-\[20px\] {
-    top: 20px;
-  }
-  .top-\[20pxpx\] {
-    top: 20pxpx;
-  }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
-  }
-  .right-\[0px\] {
-    right: 0px;
-  }
-  .right-\[1px\] {
-    right: 1px;
-  }
-  .right-\[10px\] {
-    right: 10px;
-  }
-  .right-\[10pz\] {
-    right: 10pz;
-  }
-  .right-\[12px\] {
-    right: 12px;
-  }
-  .right-\[20px\] {
-    right: 20px;
-  }
-  .right-\[30px\] {
-    right: 30px;
-  }
-  .right-\[40px\] {
-    right: 40px;
-  }
-  .right-\[50px\] {
-    right: 50px;
-  }
-  .right-\[60px\] {
-    right: 60px;
+  .-right-2 {
+    right: calc(var(--spacing) * -2);
   }
   .right-\[70px\] {
     right: 70px;
   }
-  .right-\[75px\] {
-    right: 75px;
-  }
-  .right-\[90px\] {
-    right: 90px;
-  }
   .right-\[110px\] {
     right: 110px;
-  }
-  .right-\[120px\] {
-    right: 120px;
   }
   .right-\[130px\] {
     right: 130px;
   }
-  .right-\[135px\] {
-    right: 135px;
-  }
-  .right-\[140px\] {
-    right: 140px;
-  }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
-  .bottom-\[-3px\] {
-    bottom: -3px;
-  }
-  .bottom-\[0px\] {
-    bottom: 0px;
-  }
-  .bottom-\[1px\] {
-    bottom: 1px;
-  }
-  .bottom-\[2px\] {
-    bottom: 2px;
-  }
-  .bottom-\[3px\] {
-    bottom: 3px;
-  }
-  .bottom-\[10px\] {
-    bottom: 10px;
-  }
-  .bottom-\[20px\] {
-    bottom: 20px;
-  }
-  .left-\[10px\] {
-    left: 10px;
-  }
-  .left-\[40px\] {
-    left: 40px;
-  }
   .mx-auto {
     margin-inline: auto;
+  }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
   }
   .flex {
     display: flex;
@@ -336,32 +231,23 @@
   .table {
     display: table;
   }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
   .h-10 {
     height: calc(var(--spacing) * 10);
-  }
-  .h-\[0px\] {
-    height: 0px;
-  }
-  .h-\[5px\] {
-    height: 5px;
   }
   .h-\[6px\] {
     height: 6px;
   }
-  .h-\[7\] {
-    height: 7;
-  }
-  .h-\[10px\] {
-    height: 10px;
-  }
-  .h-\[30px\] {
-    height: 30px;
-  }
-  .h-\[50px\] {
-    height: 50px;
+  .h-\[10vh\] {
+    height: 10vh;
   }
   .h-\[58px\] {
     height: 58px;
+  }
+  .h-\[59px\] {
+    height: 59px;
   }
   .h-\[60px\] {
     height: 60px;
@@ -372,47 +258,14 @@
   .h-\[65px\] {
     height: 65px;
   }
-  .h-\[68\] {
-    height: 68;
-  }
-  .h-\[68px\] {
-    height: 68px;
-  }
-  .h-\[70px\] {
-    height: 70px;
-  }
-  .h-\[73px\] {
-    height: 73px;
-  }
-  .h-\[74px\] {
-    height: 74px;
-  }
-  .h-\[75px\] {
-    height: 75px;
-  }
-  .h-\[500px\] {
-    height: 500px;
+  .h-\[100vh\] {
+    height: 100vh;
   }
   .h-\[px\] {
     height: px;
   }
   .w-\[1px\] {
     width: 1px;
-  }
-  .w-\[80\%\] {
-    width: 80%;
-  }
-  .w-\[80\] {
-    width: 80;
-  }
-  .w-\[90\%\] {
-    width: 90%;
-  }
-  .w-\[200p\] {
-    width: 200p;
-  }
-  .w-\[200px\] {
-    width: 200px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -435,14 +288,14 @@
   .justify-center {
     justify-content: center;
   }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
@@ -450,17 +303,17 @@
   .gap-7 {
     gap: calc(var(--spacing) * 7);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
-  .gap-9 {
-    gap: calc(var(--spacing) * 9);
-  }
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
+  .rounded {
+    border-radius: 0.25rem;
+  }
   .rounded-\[5px\] {
     border-radius: 5px;
+  }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -473,29 +326,14 @@
   .border-\[\#001A57\] {
     border-color: #001A57;
   }
-  .border-\[\#c\] {
-    border-color: #c;
-  }
   .bg-\[\#000F32\] {
     background-color: #000F32;
   }
-  .bg-\[\#001A57\] {
-    background-color: #001A57;
+  .bg-amber-600 {
+    background-color: var(--color-amber-600);
   }
-  .bg-\[001A57\] {
-    background-color: 001A57;
-  }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
-  }
-  .bg-amber-500 {
-    background-color: var(--color-amber-500);
-  }
-  .bg-blue-300 {
-    background-color: var(--color-blue-300);
-  }
-  .bg-blue-700 {
-    background-color: var(--color-blue-700);
+  .bg-blue-600 {
+    background-color: var(--color-blue-600);
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
@@ -506,65 +344,80 @@
   .bg-gray-400 {
     background-color: var(--color-gray-400);
   }
-  .bg-gray-600 {
-    background-color: var(--color-gray-600);
+  .bg-gray-500 {
+    background-color: var(--color-gray-500);
   }
   .bg-gray-700 {
     background-color: var(--color-gray-700);
   }
+  .bg-red-500 {
+    background-color: var(--color-red-500);
+  }
   .bg-transparent {
     background-color: transparent;
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
+  .bg-white {
+    background-color: var(--color-white);
   }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
-  .px-\[0px\] {
-    padding-inline: 0px;
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
   }
-  .px-\[10px\] {
-    padding-inline: 10px;
+  .px-\[4px\] {
+    padding-inline: 4px;
   }
   .px-\[15px\] {
     padding-inline: 15px;
   }
-  .px-\[20px\] {
-    padding-inline: 20px;
-  }
   .px-\[40px\] {
     padding-inline: 40px;
+  }
+  .px-\[px\] {
+    padding-inline: px;
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
+  }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
-  .py-\[1\] {
-    padding-block: 1;
-  }
-  .py-\[2\] {
-    padding-block: 2;
-  }
-  .py-\[2px\] {
-    padding-block: 2px;
+  .py-\[5px\] {
+    padding-block: 5px;
   }
   .py-\[10px\] {
     padding-block: 10px;
+  }
+  .py-\[15px\] {
+    padding-block: 15px;
   }
   .py-\[20px\] {
     padding-block: 20px;
   }
   .py-\[25px\] {
     padding-block: 25px;
+  }
+  .py-\[px\] {
+    padding-block: px;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -578,31 +431,28 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-\[1px\] {
-    font-size: 1px;
-  }
-  .text-\[10px\] {
-    font-size: 10px;
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
   }
   .text-\[13px\] {
     font-size: 13px;
   }
-  .text-\[15px\] {
-    font-size: 15px;
-  }
-  .text-\[20px\] {
-    font-size: 20px;
-  }
-  .text-\[30px\] {
-    font-size: 30px;
-  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
+  }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
   }
   .text-\[\#001A57\] {
     color: #001A57;
@@ -610,11 +460,11 @@
   .text-gray-200 {
     color: var(--color-gray-200);
   }
+  .text-gray-300 {
+    color: var(--color-gray-300);
+  }
   .text-gray-400 {
     color: var(--color-gray-400);
-  }
-  .text-gray-500 {
-    color: var(--color-gray-500);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -637,31 +487,6 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .transition-\[1\] {
-    transition-property: 1;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-\[1000\] {
-    transition-property: 1000;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-\[1000ms\] {
-    transition-property: 1000ms;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-\[1000s\] {
-    transition-property: 1000s;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-shadow {
-    transition-property: box-shadow;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .hover\:bg-\[\#001A57\] {
     &:hover {
       @media (hover: hover) {
@@ -681,14 +506,9 @@
       visibility: visible;
     }
   }
-  .md\:absolute {
+  .md\:block {
     @media (width >= 48rem) {
-      position: absolute;
-    }
-  }
-  .md\:relative {
-    @media (width >= 48rem) {
-      position: relative;
+      display: block;
     }
   }
   .md\:flex {
@@ -724,6 +544,21 @@
   .md\:px-16 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:px-\[40px\] {
+    @media (width >= 48rem) {
+      padding-inline: 40px;
+    }
+  }
+  .md\:py-10 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:py-\[15px\] {
+    @media (width >= 48rem) {
+      padding-block: 15px;
     }
   }
   .md\:py-\[25px\] {
