--- a/CSS/output.css
+++ b/CSS/output.css
@@ -7,12 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-amber-300: oklch(87.9% 0.169 91.605);
-    --color-amber-600: oklch(66.6% 0.179 58.318);
-    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
@@ -20,20 +16,13 @@
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-xs: 0.75rem;
-    --text-xs--line-height: calc(1 / 0.75);
-    --text-sm: 0.875rem;
-    --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-medium: 500;
-    --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -187,9 +176,6 @@
   }
 }
 @layer utilities {
-  .invisible {
-    visibility: hidden;
-  }
   .visible {
     visibility: visible;
   }
@@ -199,35 +185,11 @@
   .relative {
     position: relative;
   }
-  .top-4 {
-    top: calc(var(--spacing) * 4);
-  }
   .top-\[0\.5px\] {
     top: 0.5px;
   }
-  .top-\[0px\] {
-    top: 0px;
-  }
   .top-\[40px\] {
     top: 40px;
-  }
-  .top-\[50px\] {
-    top: 50px;
-  }
-  .top-\[60px\] {
-    top: 60px;
-  }
-  .top-\[70px\] {
-    top: 70px;
-  }
-  .top-\[80px\] {
-    top: 80px;
-  }
-  .top-\[100px\] {
-    top: 100px;
-  }
-  .top-\[200px\] {
-    top: 200px;
   }
   .right-\[70px\] {
     right: 70px;
@@ -238,17 +200,8 @@
   .right-\[130px\] {
     right: 130px;
   }
-  .left-5 {
-    left: calc(var(--spacing) * 5);
-  }
-  .left-\[20px\] {
-    left: 20px;
-  }
   .mx-auto {
     margin-inline: auto;
-  }
-  .mt-1 {
-    margin-top: calc(var(--spacing) * 1);
   }
   .ml-3 {
     margin-left: calc(var(--spacing) * 3);
@@ -265,9 +218,6 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-\[20px\] {
-    height: 20px;
-  }
   .h-\[59px\] {
     height: 59px;
   }
@@ -277,29 +227,29 @@
   .h-\[100vh\] {
     height: 100vh;
   }
-  .w-\[\%\] {
-    width: %;
+  .w-\[00px\] {
+    width: 00px;
   }
   .w-\[1px\] {
     width: 1px;
   }
-  .w-\[5px\] {
-    width: 5px;
-  }
-  .w-\[70\%\] {
-    width: 70%;
-  }
-  .w-\[70\] {
-    width: 70;
-  }
-  .w-\[80\%\] {
-    width: 80%;
-  }
   .w-\[100\%\] {
     width: 100%;
   }
-  .w-\[px\] {
-    width: px;
+  .w-\[200px\] {
+    width: 200px;
+  }
+  .w-\[400px\] {
+    width: 400px;
+  }
+  .w-\[500px\] {
+    width: 500px;
+  }
+  .w-\[600px\] {
+    width: 600px;
+  }
+  .w-\[2000px\] {
+    width: 2000px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -312,9 +262,6 @@
   }
   .flex-col {
     flex-direction: column;
-  }
-  .flex-row {
-    flex-direction: row;
   }
   .items-center {
     align-items: center;
@@ -357,9 +304,6 @@
   .bg-gray-200 {
     background-color: var(--color-gray-200);
   }
-  .bg-gray-400 {
-    background-color: var(--color-gray-400);
-  }
   .bg-gray-700 {
     background-color: var(--color-gray-700);
   }
@@ -369,11 +313,11 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-cover {
+    background-size: cover;
+  }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
-  }
-  .px-20 {
-    padding-inline: calc(var(--spacing) * 20);
   }
   .px-\[40px\] {
     padding-inline: 40px;
@@ -390,9 +334,6 @@
   .py-\[20px\] {
     padding-block: 20px;
   }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
-  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
@@ -408,34 +349,18 @@
   .text-\[13px\] {
     font-size: 13px;
   }
-  .font-bold {
-    --tw-font-weight: var(--font-weight-bold);
-    font-weight: var(--font-weight-bold);
-  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
-  .text-\[\#000F32\] {
-    color: #000F32;
-  }
   .text-\[\#001A57\] {
     color: #001A57;
-  }
-  .text-\[000F32\] {
-    color: 000F32;
-  }
-  .text-amber-300 {
-    color: var(--color-amber-300);
   }
   .text-gray-200 {
     color: var(--color-gray-200);
   }
   .text-gray-400 {
     color: var(--color-gray-400);
-  }
-  .text-gray-500 {
-    color: var(--color-gray-500);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -484,11 +409,6 @@
       visibility: hidden;
     }
   }
-  .md\:visible {
-    @media (width >= 48rem) {
-      visibility: visible;
-    }
-  }
   .md\:block {
     @media (width >= 48rem) {
       display: block;
@@ -497,11 +417,6 @@
   .md\:flex {
     @media (width >= 48rem) {
       display: flex;
-    }
-  }
-  .md\:hidden {
-    @media (width >= 48rem) {
-      display: none;
     }
   }
   .md\:h-\[73px\] {
